[gd_scene load_steps=29 format=2]

[ext_resource path="res://background/Green.png" type="Texture" id=1]
[ext_resource path="res://word_tileset.tres" type="TileSet" id=2]
[ext_resource path="res://seteve.tscn" type="PackedScene" id=3]
[ext_resource path="res://level2/gate handle/tile_0064.png" type="Texture" id=4]
[ext_resource path="res://level2/level2.gd" type="Script" id=5]
[ext_resource path="res://level2/gate handle/tile_0067.png" type="Texture" id=6]
[ext_resource path="res://soundsandmusic/sounds/powerUp2.ogg" type="AudioStream" id=7]
[ext_resource path="res://level2/gate handle/tile_0065.png" type="Texture" id=8]
[ext_resource path="res://fonts/BalsamiqSans-Bold.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://level2/gate handle/exitGate-removebg-preview.png" type="Texture" id=10]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 25, 24.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 19, 17.5 )

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -329, -419 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "collect_diamond"
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -329, -469 ), Vector2( -329, -584 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "dimond1"
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -329, -421 ), Vector2( -329, -465 ) ]
}

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 246, -223 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "collect-diamond"
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 246, -278 ), Vector2( 246, -362 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "up-diamond"
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 246, -223 ), Vector2( 246, -278 ) ]
}

[sub_resource type="Animation" id=9]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 583, -223 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "collect-diamond"
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 583, -278 ), Vector2( 583, -362 ) ]
}

[sub_resource type="Animation" id=11]
resource_name = "up-diamond"
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 583, -223 ), Vector2( 583, -278 ) ]
}

[sub_resource type="Animation" id=12]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1133, -420 ) ]
}

[sub_resource type="Animation" id=13]
resource_name = "collect-diamond"
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1133, -470 ), Vector2( 1133, -557 ) ]
}

[sub_resource type="Animation" id=14]
resource_name = "up-diamond"
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1133, -420 ), Vector2( 1133, -470 ) ]
}

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 0, 0, 0, 0.0823529 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="DynamicFont" id=16]
size = 51
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=17]
size = 52
font_data = ExtResource( 9 )

[sub_resource type="RectangleShape2D" id=18]
extents = Vector2( 47, 56.5 )

[node name="level2" type="Node2D"]
script = ExtResource( 5 )

[node name="TileMap" type="TileMap" parent="."]
modulate = Color( 0.639216, 0.54902, 0.858824, 1 )
tile_set = ExtResource( 2 )
format = 1
tile_data = PoolIntArray( -983054, 0, 0, -983053, 0, 0, -983052, 0, 0, -983051, 0, 0, -983050, 0, 0, -983049, 0, 0, -983048, 0, 0, -983047, 0, 0, -983046, 0, 0, -983045, 0, 0, -983044, 0, 0, -983043, 0, 0, -983042, 0, 0, -983041, 0, 0, -1048576, 0, 0, -1048575, 0, 0, -1048574, 0, 0, -1048573, 0, 0, -1048572, 0, 0, -1048571, 0, 0, -1048570, 0, 0, -1048569, 0, 0, -1048568, 0, 0, -1048567, 0, 0, -1048566, 0, 0, -1048565, 0, 0, -1048564, 0, 0, -1048563, 0, 0, -1048562, 0, 0, -1048561, 0, 0, -1048560, 0, 0, -1048559, 0, 0, -1048558, 0, 0, -1048557, 0, 0, -1048556, 0, 0, -1048555, 0, 0, -1048554, 0, 0, -1048553, 0, 0, -1048552, 0, 0, -1048551, 0, 0, -917518, 0, 0, -917517, 0, 0, -917516, 0, 0, -917515, 0, 0, -917514, 0, 0, -917513, 0, 0, -917512, 0, 0, -917511, 0, 0, -917510, 0, 0, -917509, 0, 0, -917508, 0, 0, -917507, 0, 0, -917506, 0, 0, -917505, 0, 0, -983040, 0, 0, -983039, 0, 0, -983038, 0, 0, -983037, 0, 0, -983036, 0, 0, -983035, 0, 0, -983034, 0, 0, -983033, 0, 0, -983032, 0, 0, -983031, 0, 0, -983030, 0, 0, -983029, 0, 0, -983028, 0, 0, -983027, 0, 0, -983026, 0, 0, -983025, 0, 0, -983024, 0, 0, -983023, 0, 0, -983022, 0, 0, -983021, 0, 0, -983020, 0, 0, -983019, 0, 0, -983018, 0, 0, -983017, 0, 0, -983016, 0, 0, -983015, 0, 0, -851982, 0, 0, -851981, 0, 0, -851980, 0, 0, -851979, 0, 0, -851978, 0, 0, -851977, 0, 0, -851976, 0, 0, -851975, 0, 0, -851974, 0, 0, -851973, 0, 0, -851972, 0, 0, -851971, 0, 0, -851970, 0, 0, -851969, 0, 0, -917504, 0, 0, -917503, 0, 0, -917502, 0, 0, -917501, 0, 0, -917500, 0, 0, -917499, 0, 0, -917498, 0, 0, -917497, 0, 0, -917496, 0, 0, -917495, 0, 0, -917494, 0, 0, -917493, 0, 0, -917492, 0, 0, -917491, 0, 0, -917490, 0, 0, -917489, 0, 0, -917488, 0, 0, -917487, 0, 0, -917486, 0, 0, -917485, 0, 0, -917484, 0, 0, -917483, 0, 0, -917482, 0, 0, -917481, 0, 0, -917480, 0, 0, -917479, 0, 0, -786446, 0, 0, -786445, 0, 0, -786444, 0, 0, -786443, 0, 0, -786442, 0, 0, -786441, 0, 0, -786440, 0, 0, -786439, 0, 0, -786438, 0, 0, -786437, 0, 0, -786436, 0, 0, -786435, 0, 0, -786434, 0, 0, -786433, 0, 0, -851968, 0, 0, -851967, 0, 0, -851966, 0, 0, -851965, 0, 0, -851964, 0, 0, -851963, 0, 0, -851962, 0, 0, -851961, 0, 0, -851960, 0, 0, -851959, 0, 0, -851958, 0, 0, -851957, 0, 0, -851956, 0, 0, -851955, 0, 0, -851954, 0, 0, -851953, 0, 0, -851952, 0, 0, -851951, 0, 0, -851950, 0, 0, -851949, 0, 0, -851948, 0, 0, -851947, 0, 0, -851946, 0, 0, -851945, 0, 0, -851944, 0, 0, -851943, 0, 0, -720910, 0, 0, -720909, 0, 0, -720908, 0, 0, -720907, 0, 0, -720906, 0, 0, -720905, 0, 0, -720904, 0, 0, -720903, 0, 0, -720902, 0, 0, -720901, 0, 0, -720900, 0, 0, -720899, 0, 0, -720898, 0, 0, -720897, 0, 0, -786432, 0, 0, -786431, 0, 0, -786430, 0, 0, -786429, 0, 0, -786428, 0, 0, -786427, 0, 0, -786426, 0, 0, -786425, 0, 0, -786424, 0, 0, -786423, 0, 0, -786422, 0, 0, -786421, 0, 0, -786420, 0, 0, -786419, 0, 0, -786418, 0, 0, -786417, 0, 0, -786416, 0, 0, -786415, 0, 0, -786414, 0, 0, -786413, 0, 0, -786412, 0, 0, -786411, 0, 0, -786410, 0, 0, -786409, 0, 0, -786408, 0, 0, -786407, 0, 0, -655374, 0, 0, -655373, 0, 0, -655372, 0, 0, -655371, 0, 0, -655370, 0, 0, -655369, 0, 0, -655368, 0, 0, -655367, 0, 0, -655366, 0, 0, -655365, 0, 0, -655364, 0, 0, -655363, 0, 0, -655362, 0, 0, -655361, 0, 0, -720896, 0, 0, -720895, 0, 0, -720894, 0, 0, -720893, 0, 0, -720892, 0, 0, -720891, 0, 0, -720890, 0, 0, -720889, 0, 0, -720888, 0, 0, -720887, 0, 0, -720886, 0, 0, -720885, 0, 0, -720884, 0, 0, -720883, 0, 0, -720882, 0, 0, -720881, 0, 0, -720880, 0, 0, -720879, 0, 0, -720878, 0, 0, -720877, 0, 0, -720876, 0, 0, -720875, 0, 0, -720874, 0, 0, -720873, 0, 0, -720872, 0, 0, -720871, 0, 0, -589838, 0, 0, -589837, 0, 0, -589836, 0, 0, -589835, 0, 0, -589834, 0, 0, -589833, 0, 0, -589832, 0, 0, -589831, 0, 0, -655341, 0, 0, -655340, 0, 0, -655339, 0, 0, -655338, 0, 0, -655337, 0, 0, -655336, 0, 0, -655335, 0, 0, -524302, 0, 0, -524301, 0, 0, -524300, 0, 0, -524299, 0, 0, -524298, 0, 0, -524297, 0, 0, -524296, 0, 0, -524295, 0, 0, -589805, 0, 0, -589804, 0, 0, -589803, 0, 0, -589802, 0, 0, -589801, 0, 0, -589800, 0, 0, -589799, 0, 0, -458766, 0, 0, -458765, 0, 0, -458764, 0, 0, -458763, 0, 0, -458762, 0, 0, -458761, 0, 0, -458760, 0, 0, -458759, 0, 0, -524269, 0, 0, -524268, 0, 0, -524267, 0, 0, -524266, 0, 0, -524265, 0, 0, -524264, 0, 0, -524263, 0, 0, -393230, 0, 0, -393229, 0, 0, -393228, 0, 0, -393227, 0, 0, -393226, 0, 0, -393225, 0, 0, -393224, 0, 0, -393223, 0, 0, -393222, 2, 0, -393221, 2, 0, -393220, 2, 0, -393219, 3, 0, -458747, 5, 0, -458746, 2, 0, -458745, 6, 0, -458737, 1, 0, -458736, 2, 0, -458735, 2, 0, -458734, 2, 0, -458733, 0, 0, -458732, 0, 0, -458731, 0, 0, -458730, 0, 0, -458729, 0, 0, -458728, 0, 0, -458727, 0, 0, -327694, 0, 0, -327693, 0, 0, -327692, 0, 0, -327691, 0, 0, -327690, 0, 0, -327689, 0, 0, -327688, 0, 0, -327687, 0, 0, -393197, 0, 0, -393196, 0, 0, -393195, 0, 0, -393194, 0, 0, -393193, 0, 0, -393192, 0, 0, -393191, 0, 0, -262158, 0, 0, -262157, 0, 0, -262156, 0, 0, -262155, 0, 0, -262154, 0, 0, -262153, 0, 0, -262152, 0, 0, -262151, 0, 0, -327661, 0, 0, -327660, 0, 0, -327659, 0, 0, -327658, 0, 0, -327657, 0, 0, -327656, 0, 0, -327655, 0, 0, -196622, 0, 0, -196621, 0, 0, -196620, 0, 0, -196619, 0, 0, -196618, 0, 0, -196617, 0, 0, -196616, 0, 0, -196615, 0, 0, -196614, 2, 0, -196613, 2, 0, -196612, 2, 0, -196611, 2, 0, -196610, 2, 0, -196609, 3, 0, -262141, 1, 0, -262140, 2, 0, -262139, 2, 0, -262138, 2, 0, -262137, 2, 0, -262136, 2, 0, -262135, 3, 0, -262131, 1, 0, -262130, 2, 0, -262129, 2, 0, -262128, 2, 0, -262127, 2, 0, -262126, 2, 0, -262125, 0, 0, -262124, 0, 0, -262123, 0, 0, -262122, 0, 0, -262121, 0, 0, -262120, 0, 0, -262119, 0, 0, -131086, 0, 0, -131085, 0, 0, -131084, 0, 0, -131083, 0, 0, -131082, 0, 0, -131081, 0, 0, -131080, 0, 0, -131079, 0, 0, -196589, 0, 0, -196588, 0, 0, -196587, 0, 0, -196586, 0, 0, -196585, 0, 0, -196584, 0, 0, -196583, 0, 0, -65550, 0, 0, -65549, 0, 0, -65548, 0, 0, -65547, 0, 0, -65546, 0, 0, -65545, 0, 0, -65544, 0, 0, -65543, 0, 0, -131053, 0, 0, -131052, 0, 0, -131051, 0, 0, -131050, 0, 0, -131049, 0, 0, -131048, 0, 0, -131047, 0, 0, -14, 0, 0, -13, 0, 0, -12, 0, 0, -11, 0, 0, -10, 0, 0, -9, 0, 0, -8, 0, 0, -7, 0, 0, -6, 2, 0, -5, 2, 0, -4, 2, 0, -3, 2, 0, -2, 2, 0, -1, 2, 0, -65536, 2, 0, -65535, 2, 0, -65534, 2, 0, -65533, 2, 0, -65532, 2, 0, -65531, 2, 0, -65530, 2, 0, -65529, 2, 0, -65528, 2, 0, -65527, 2, 0, -65526, 2, 0, -65525, 2, 0, -65524, 2, 0, -65523, 2, 0, -65522, 2, 0, -65521, 2, 0, -65520, 2, 0, -65519, 2, 0, -65518, 2, 0, -65517, 0, 0, -65516, 0, 0, -65515, 0, 0, -65514, 0, 0, -65513, 0, 0, -65512, 0, 0, -65511, 0, 0, 65522, 0, 0, 65523, 0, 0, 65524, 0, 0, 65525, 0, 0, 65526, 0, 0, 65527, 0, 0, 65528, 0, 0, 65529, 0, 0, 65530, 0, 0, 65531, 0, 0, 65532, 0, 0, 65533, 0, 0, 65534, 0, 0, 65535, 0, 0, 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 15, 0, 0, 16, 0, 0, 17, 0, 0, 18, 0, 0, 19, 0, 0, 20, 0, 0, 21, 0, 0, 22, 0, 0, 23, 0, 0, 24, 0, 0, 25, 0, 0, 131058, 0, 0, 131059, 0, 0, 131060, 0, 0, 131061, 0, 0, 131062, 0, 0, 131063, 0, 0, 131064, 0, 0, 131065, 0, 0, 131066, 0, 0, 131067, 0, 0, 131068, 0, 0, 131069, 0, 0, 131070, 0, 0, 131071, 0, 0, 65536, 0, 0, 65537, 0, 0, 65538, 0, 0, 65539, 0, 0, 65540, 0, 0, 65541, 0, 0, 65542, 0, 0, 65543, 0, 0, 65544, 0, 0, 65545, 0, 0, 65546, 0, 0, 65547, 0, 0, 65548, 0, 0, 65549, 0, 0, 65550, 0, 0, 65551, 0, 0, 65552, 0, 0, 65553, 0, 0, 65554, 0, 0, 65555, 0, 0, 65556, 0, 0, 65557, 0, 0, 65558, 0, 0, 65559, 0, 0, 65560, 0, 0, 65561, 0, 0, 196594, 0, 0, 196595, 0, 0, 196596, 0, 0, 196597, 0, 0, 196598, 0, 0, 196599, 0, 0, 196600, 0, 0, 196601, 0, 0, 196602, 0, 0, 196603, 0, 0, 196604, 0, 0, 196605, 0, 0, 196606, 0, 0, 196607, 0, 0, 131072, 0, 0, 131073, 0, 0, 131074, 0, 0, 131075, 0, 0, 131076, 0, 0, 131077, 0, 0, 131078, 0, 0, 131079, 0, 0, 131080, 0, 0, 131081, 0, 0, 131082, 0, 0, 131083, 0, 0, 131084, 0, 0, 131085, 0, 0, 131086, 0, 0, 131087, 0, 0, 131088, 0, 0, 131089, 0, 0, 131090, 0, 0, 131091, 0, 0, 131092, 0, 0, 131093, 0, 0, 131094, 0, 0, 131095, 0, 0, 131096, 0, 0, 131097, 0, 0, 262130, 0, 0, 262131, 0, 0, 262132, 0, 0, 262133, 0, 0, 262134, 0, 0, 262135, 0, 0, 262136, 0, 0, 262137, 0, 0, 262138, 0, 0, 262139, 0, 0, 262140, 0, 0, 262141, 0, 0, 262142, 0, 0, 262143, 0, 0, 196608, 0, 0, 196609, 0, 0, 196610, 0, 0, 196611, 0, 0, 196612, 0, 0, 196613, 0, 0, 196614, 0, 0, 196615, 0, 0, 196616, 0, 0, 196617, 0, 0, 196618, 0, 0, 196619, 0, 0, 196620, 0, 0, 196621, 0, 0, 196622, 0, 0, 196623, 0, 0, 196624, 0, 0, 196625, 0, 0, 196626, 0, 0, 196627, 0, 0, 196628, 0, 0, 196629, 0, 0, 196630, 0, 0, 196631, 0, 0, 196632, 0, 0, 196633, 0, 0, 327666, 0, 0, 327667, 0, 0, 327668, 0, 0, 327669, 0, 0, 327670, 0, 0, 327671, 0, 0, 327672, 0, 0, 327673, 0, 0, 327674, 0, 0, 327675, 0, 0, 327676, 0, 0, 327677, 0, 0, 327678, 0, 0, 327679, 0, 0, 262144, 0, 0, 262145, 0, 0, 262146, 0, 0, 262147, 0, 0, 262148, 0, 0, 262149, 0, 0, 262150, 0, 0, 262151, 0, 0, 262152, 0, 0, 262153, 0, 0, 262154, 0, 0, 262155, 0, 0, 262156, 0, 0, 262157, 0, 0, 262158, 0, 0, 262159, 0, 0, 262160, 0, 0, 262161, 0, 0, 262162, 0, 0, 262163, 0, 0, 262164, 0, 0, 262165, 0, 0, 262166, 0, 0, 262167, 0, 0, 262168, 0, 0, 262169, 0, 0 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="background" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 1280, 960 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/background"]
position = Vector2( 0, -1 )
scale = Vector2( 20, 20 )
texture = ExtResource( 1 )
centered = false

[node name="seteve" parent="." instance=ExtResource( 3 )]
position = Vector2( -280, -123 )
__meta__ = {
"_edit_group_": true,
"_editor_description_": ""
}

[node name="Camera2D" type="Camera2D" parent="seteve"]
current = true
drag_margin_h_enabled = true
drag_margin_v_enabled = true

[node name="liver" type="Area2D" parent="."]
position = Vector2( -335, -283 )
z_index = -1
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="liver"]
scale = Vector2( 3, 3 )
texture = ExtResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="liver"]
position = Vector2( 0, 2.5 )
shape = SubResource( 1 )

[node name="liver2" type="Area2D" parent="."]
position = Vector2( 415, -474 )
z_index = -1
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="liver2"]
scale = Vector2( 3, 3 )
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="liver2"]
position = Vector2( 0, 2.5 )
shape = SubResource( 1 )

[node name="liver3" type="Area2D" parent="."]
position = Vector2( 1133, -283 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="liver3"]
scale = Vector2( 3, 3 )
texture = ExtResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="liver3"]
position = Vector2( 0, 2.5 )
shape = SubResource( 1 )

[node name="dimond" type="Area2D" parent="."]
position = Vector2( -329, -419 )
z_index = -1
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="dimond"]
scale = Vector2( 3, 3 )
texture = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="dimond"]
position = Vector2( 0, -0.5 )
shape = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="dimond/CollisionShape2D"]
position = Vector2( 0, -0.5 )
shape = SubResource( 2 )

[node name="AnimationPlayerDiamond" type="AnimationPlayer" parent="dimond"]
anims/RESET = SubResource( 3 )
anims/collect_diamond = SubResource( 5 )
anims/dimond1 = SubResource( 4 )

[node name="collect_diamond" type="AudioStreamPlayer2D" parent="dimond"]
stream = ExtResource( 7 )

[node name="dimond2" type="Area2D" parent="."]
position = Vector2( 246, -223 )
z_index = -1
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="dimond2"]
scale = Vector2( 3, 3 )
texture = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="dimond2"]
position = Vector2( 0, -0.5 )
shape = SubResource( 2 )

[node name="AnimationPlayerDiamond2" type="AnimationPlayer" parent="dimond2"]
anims/RESET = SubResource( 6 )
anims/collect-diamond = SubResource( 7 )
anims/up-diamond = SubResource( 8 )

[node name="collect_diamond" type="AudioStreamPlayer2D" parent="dimond2"]
stream = ExtResource( 7 )

[node name="dimond3" type="Area2D" parent="."]
position = Vector2( 583, -223 )
z_index = -1
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="dimond3"]
scale = Vector2( 3, 3 )
texture = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="dimond3"]
position = Vector2( 0, -0.5 )
shape = SubResource( 2 )

[node name="AnimationPlayerDiamond3" type="AnimationPlayer" parent="dimond3"]
anims/RESET = SubResource( 9 )
anims/collect-diamond = SubResource( 10 )
anims/up-diamond = SubResource( 11 )

[node name="collect_diamond" type="AudioStreamPlayer2D" parent="dimond3"]
stream = ExtResource( 7 )

[node name="dimond4" type="Area2D" parent="."]
position = Vector2( 1133, -420 )
z_index = -1
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="dimond4"]
scale = Vector2( 3, 3 )
texture = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="dimond4"]
shape = SubResource( 2 )

[node name="AnimationPlayerDiamond4" type="AnimationPlayer" parent="dimond4"]
anims/RESET = SubResource( 12 )
anims/collect-diamond = SubResource( 13 )
anims/up-diamond = SubResource( 14 )

[node name="collect_diamond" type="AudioStreamPlayer2D" parent="dimond4"]
stream = ExtResource( 7 )

[node name="HOD" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="HOD"]
margin_left = 8.75507
margin_top = 7.24492
margin_right = 271.755
margin_bottom = 117.245
custom_styles/panel = SubResource( 15 )

[node name="TextureRect" type="TextureRect" parent="HOD"]
margin_left = 33.6529
margin_top = 24.3674
margin_right = 118.653
margin_bottom = 104.367
texture = ExtResource( 6 )
expand = true

[node name="X" type="Label" parent="HOD"]
margin_left = 136.245
margin_top = 32.8775
margin_right = 173.245
margin_bottom = 95.8775
custom_colors/font_color = Color( 0.964706, 1, 0.00784314, 1 )
custom_fonts/font = SubResource( 16 )
text = "x"

[node name="Coin" type="Label" parent="HOD"]
margin_left = 174.418
margin_top = 35.2652
margin_right = 248.418
margin_bottom = 98.2652
custom_colors/font_color = Color( 0.996078, 1, 0.00392157, 1 )
custom_fonts/font = SubResource( 17 )
text = "##"
align = 1

[node name="exitGate" type="Area2D" parent="."]
position = Vector2( 1133, -162 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="exitGate"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="exitGate"]
position = Vector2( 24, 41.5 )
shape = SubResource( 18 )

[connection signal="body_entered" from="liver" to="." method="_on_liver_body_entered"]
[connection signal="body_entered" from="liver2" to="." method="_on_liver2_body_entered"]
[connection signal="body_entered" from="liver3" to="." method="_on_liver3_body_entered"]
[connection signal="body_entered" from="dimond" to="." method="_on_dimond_body_entered"]
[connection signal="animation_finished" from="dimond/AnimationPlayerDiamond" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="body_entered" from="dimond2" to="." method="_on_dimond2_body_entered"]
[connection signal="animation_finished" from="dimond2/AnimationPlayerDiamond2" to="." method="_on_AnimationPlayerDiamond2_animation_finished"]
[connection signal="body_entered" from="dimond3" to="." method="_on_dimond3_body_entered"]
[connection signal="animation_finished" from="dimond3/AnimationPlayerDiamond3" to="." method="_on_AnimationPlayerDiamond3_animation_finished"]
[connection signal="body_entered" from="dimond4" to="." method="_on_dimond4_body_entered"]
[connection signal="animation_finished" from="dimond4/AnimationPlayerDiamond4" to="." method="_on_AnimationPlayerDiamond4_animation_finished"]
